--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-05-23 Aleksey Sanin  <aleksey@aleksey.com>
+        * 1.2.20 release
+        
 2014-05-23  Aleksey Sanin  <aleksey@aleksey.com>
         * fix build on MacOSX (bug #680307)
         * update certs for examples (bug #674572)
