fix DSA-SHA256 signatures + test cases (bug #745493)

--- a/tests/keys/README
+++ b/tests/keys/README
@@ -11,6 +11,8 @@ README
  ca2cert.pem 	Second-level RSA cert for ca2key.pem
  dsakey.pem	DSA private key
  dsacert.pem 	Third level DSA cert for dsakey.pem
+ dsa2048key.pem DSA private key (2048 bits)
+ dsa3072key.pem DSA private key (3072 bits)
  rsakey.pem	RSA private key
  rsacert.pem 	Third level RSA cert for rsacert.pem
  hmackey.bin	HMAC key ('secret')
@@ -37,11 +39,23 @@ README
     > openssl verify -CAfile cacert.pem ca2cert.pem
 
  C. Generate and sign DSA key with second level CA
-    > openssl dsaparam -out dsakey.pem -genkey 512
+    > openssl dsaparam -out dsakey.pem -genkey 1024
     > openssl req -config ./openssl.cnf -new -key dsakey.pem -out dsareq.pem
     > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem \
 	    -out dsacert.pem -infiles dsareq.pem
     > openssl verify -CAfile cacert.pem -untrusted ca2cert.pem dsacert.pem
+
+    > openssl dsaparam -out dsa2048key.pem -genkey 2048
+    > openssl req -config ./openssl.cnf -new -key dsa2048key.pem -out dsa2048req.pem
+    > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem \
+        -out dsa2048cert.pem -infiles dsa2048req.pem
+    > openssl verify -CAfile cacert.pem -untrusted ca2cert.pem dsa2048cert.pem
+
+    > openssl dsaparam -out dsa3072key.pem -genkey 3072
+    > openssl req -config ./openssl.cnf -new -key dsa3072key.pem -out dsa3072req.pem
+    > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem \
+        -out dsa3072cert.pem -infiles dsa3072req.pem
+    > openssl verify -CAfile cacert.pem -untrusted ca2cert.pem dsa3072cert.pem
 
  D. Generate and sign RSA key with second level CA
     > openssl genrsa -out rsakey.pem
@@ -74,11 +88,15 @@ README
     > openssl rsa -inform PEM -outform DER -in expiredkey.pem -out expiredkey.der
   DSA key:
     > openssl dsa -inform PEM -outform DER -in dsakey.pem -out dsakey.der
+    > openssl dsa -inform PEM -outform DER -in dsa2048key.pem -out dsa2048key.der
+    > openssl dsa -inform PEM -outform DER -in dsa3072key.pem -out dsa3072key.der
 
   - Convert PEM cert file to DER file
     > openssl x509 -outform DER -in cacert.pem -out cacert.der 
     > openssl x509 -outform DER -in ca2cert.pem -out ca2cert.der 
     > openssl x509 -outform DER -in dsacert.pem -out dsacert.der 
+    > openssl x509 -outform DER -in dsa2048cert.pem -out dsa2048cert.der 
+    > openssl x509 -outform DER -in dsa3072cert.pem -out dsa3072cert.der 
     > openssl x509 -outform DER -in rsacert.pem -out rsacert.der 
     > openssl x509 -outform DER -in largersacert.pem -out largersacert.der 
     > openssl x509 -outform DER -in expiredcert.pem -out expiredcert.der 
@@ -100,6 +118,10 @@ README
    encrypted
      > openssl pkcs8 -in dsakey.pem -inform pem -out dsakey.p8-pem -outform pem -topk8
      > openssl pkcs8 -in dsakey.der -inform der -out dsakey.p8-der -outform der -topk8
+     > openssl pkcs8 -in dsa2048key.pem -inform pem -out dsa2048key.p8-pem -outform pem -topk8
+     > openssl pkcs8 -in dsa2048key.der -inform der -out dsa2048key.p8-der -outform der -topk8
+     > openssl pkcs8 -in dsa3072key.pem -inform pem -out dsa3072key.p8-pem -outform pem -topk8
+     > openssl pkcs8 -in dsa3072key.der -inform der -out dsa3072key.p8-der -outform der -topk8
      > openssl pkcs8 -in rsakey.pem -inform pem -out rsakey.p8-pem -outform pem -topk8
      > openssl pkcs8 -in rsakey.der -inform der -out rsakey.p8-der -outform der -topk8
      > openssl pkcs8 -in largersakey.pem -inform pem -out largersakey.p8-pem \
@@ -113,6 +135,12 @@ README
 
     > cat dsakey.pem dsacert.pem ca2cert.pem cacert.pem > alldsa.pem
     > openssl pkcs12 -export -in alldsa.pem -name TestDsaKey -out dsakey.p12
+
+    > cat dsa2048key.pem dsa2048cert.pem ca2cert.pem cacert.pem > alldsa2048.pem
+    > openssl pkcs12 -export -in alldsa2048.pem -name TestDsa2048Key -out dsa2048key.p12
+
+    > cat dsa3072key.pem dsa3072cert.pem ca2cert.pem cacert.pem > alldsa3072.pem
+    > openssl pkcs12 -export -in alldsa3072.pem -name TestDsa3072Key -out dsa3072key.p12
 
     > cat rsakey.pem rsacert.pem ca2cert.pem cacert.pem > allrsa.pem
     > openssl pkcs12 -export -in allrsa.pem -name TestRsaKey -out rsakey.p12
