--- a/tests/keys/README
+++ b/tests/keys/README
@@ -78,18 +78,30 @@ README
     > openssl ca -config ./openssl.cnf -days 1 -cert ca2cert.pem \
 	    -keyfile ca2key.pem -out expiredcert.pem -infiles expiredreq.pem
     > openssl verify -CAfile cacert.pem -untrusted ca2cert.pem expiredcert.pem
+    
+  G. Generate ECDSA key with second level CA
+    > openssl ecparam -list_curves
+    > openssl ecparam -name secp256k1 -genkey -noout -out ecdsa-secp256k1-key.pem
+    > openssl req -config ./openssl.cnf -new -key ecdsa-secp256k1-key.pem -out ecdsa-secp256k1-req.pem
+    > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem \
+        -out ecdsa-secp256k1-cert.pem -infiles ecdsa-secp256k1-req.pem
+     > openssl verify -CAfile cacert.pem -untrusted ca2cert.pem ecdsa-secp256k1-cert.pem
+     > rm ecdsa-secp256k1-req.pem
  
 3. Converting key and certs between PEM and DER formats
 
   - Convert PEM private key file to DER file
-  RSA key:
+  RSA keys:
     > openssl rsa -inform PEM -outform DER -in rsakey.pem -out rsakey.der
     > openssl rsa -inform PEM -outform DER -in largersakey.pem -out largersakey.der
     > openssl rsa -inform PEM -outform DER -in expiredkey.pem -out expiredkey.der
-  DSA key:
+  DSA keys:
     > openssl dsa -inform PEM -outform DER -in dsakey.pem -out dsakey.der
     > openssl dsa -inform PEM -outform DER -in dsa2048key.pem -out dsa2048key.der
     > openssl dsa -inform PEM -outform DER -in dsa3072key.pem -out dsa3072key.der
+    
+  ECDSA keys:
+    > openssl ec -inform PEM -outform DER -in ecdsa-secp256k1-key.pem -out ecdsa-secp256k1-key.der
 
   - Convert PEM cert file to DER file
     > openssl x509 -outform DER -in cacert.pem -out cacert.der 
@@ -100,6 +112,7 @@ README
     > openssl x509 -outform DER -in rsacert.pem -out rsacert.der 
     > openssl x509 -outform DER -in largersacert.pem -out largersacert.der 
     > openssl x509 -outform DER -in expiredcert.pem -out expiredcert.der 
+    > openssl x509 -outform DER -in ecdsa-secp256k1-cert.pem -out ecdsa-secp256k1-cert.der 
   
   - (optional) Convert PEM public key file to DER file
   RSA key:
@@ -115,7 +128,7 @@ README
 
 4. Converting an unencrypted PEM or DER file containing a private key
    to an encrypted PEM or DER file containing the same private key but
-   encrypted
+   encrypted (the tests password is secret123):
      > openssl pkcs8 -in dsakey.pem -inform pem -out dsakey.p8-pem -outform pem -topk8
      > openssl pkcs8 -in dsakey.der -inform der -out dsakey.p8-der -outform der -topk8
      > openssl pkcs8 -in dsa2048key.pem -inform pem -out dsa2048key.p8-pem -outform pem -topk8
@@ -128,10 +141,12 @@ README
         -outform pem -topk8
      > openssl pkcs8 -in largersakey.der -inform der -out largersakey.p8-der \
         -outform der -topk8
+     > openssl pkcs8 -in ecdsa-secp256k1-key.der -inform der -out ecdsa-secp256k1-key.p8-der \
+        -outform der -topk8
      
 5. NSS is unfriendly towards standalone private keys.
    This procedure helps convert raw private keys into PKCS12 form that is 
-   suitable for not only NSS but all crypto engines.
+   suitable for not only NSS but all crypto engines (the tests password is secret123):
 
     > cat dsakey.pem dsacert.pem ca2cert.pem cacert.pem > alldsa.pem
     > openssl pkcs12 -export -in alldsa.pem -name TestDsaKey -out dsakey.p12
@@ -152,6 +167,9 @@ README
     > openssl pkcs12 -export -in allexpired.pem -name TestExpiredRsaKey \
       -out expiredkey.p12
 
+    > cat ecdsa-secp256k1-key.pem ecdsa-secp256k1-cert.pem ca2cert.pem cacert.pem > all-ecdsa-secp256k1.pem
+    > openssl pkcs12 -export -in all-ecdsa-secp256k1.pem -name TestEcdsaSecp256k1Key -out ecdsa-secp256k1-key.p12
+    > rm all-ecdsa-secp256k1.pem
 
    5a.
        Input: DSA/RSA private key in PEM or DER format
