--- a/man/xmlsec1.1
+++ b/man/xmlsec1.1
@@ -264,6 +264,6 @@ Written by Aleksey Sanin <aleksey@aleksey.com>.
 .SH "REPORTING BUGS"
 Report bugs to http://www.aleksey.com/xmlsec/bugs.html
 .SH COPYRIGHT
-Copyright \(co 2002\-2016 Aleksey Sanin <aleksey@aleksey.com>. All Rights Reserved.
+Copyright \(co 2002\-2016 Aleksey Sanin <aleksey@aleksey.com>. All Rights Reserved..
 .br
 This is free software: see the source for copying information.
