--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
-2016-02-01 Aleksey Sanin  <aleksey@aleksey.com>
+2016-02-15 Aleksey Sanin  <aleksey@aleksey.com>
         * 1.2.21 release
+
+2016-02-06 Aleksey Sanin  <aleksey@aleksey.com>
+        * Deprecated XMLSEC_CRYPTO define in favor of xmlSecGetDefaultCrypto() function
+
+2016-02-05 Aleksey Sanin  <aleksey@aleksey.com>
+        * Revamped manpages/documentation build to completely pass 'make distcheck' tests
 
 2016-01-28 Aleksey Sanin  <aleksey@aleksey.com>
         * Added OpenSSL 1.1.0 API support (major refactoring for block ciphers and DSA/ECDSA signatures)
