--- a/README
+++ b/README
@@ -5,17 +5,17 @@ XMLSec library provides C based implementation for major XML Security
 standards:
 
     * XML Signature Syntax and Processing
-      http://www.w3.org/TR/xmldsig-core
+      https://www.w3.org/TR/xmldsig-core
 
     * XML Encryption Syntax and Processing
-      http://www.w3.org/TR/xmlenc-core/
+      https://www.w3.org/TR/xmlenc-core/
 
 XMLSec is based on well known LibXML (http://xmlsoft.org), LibXSLT
-(http://xmlsoft.org/XSLT) and OpenSSL (http://www.openssl.org) libraries.
+(http://xmlsoft.org/XSLT) and OpenSSL (https://www.openssl.org) libraries.
 
 XMLSec library documentation is available here:
 
-http://www.aleksey.com/xmlsec/
+https://www.aleksey.com/xmlsec/
 
 This code is released under the MIT Licence see the Copyright file.
 
