--- a/HACKING
+++ b/HACKING
@@ -1,4 +1,4 @@
-IF you are interesting to contribute to XMLSec, consider sending a PR on github:
+If you are interesting in contributing to XMLSec, then consider sending a PR on github:
 
 https://github.com/lsh123/xmlsec
 
