--- a/tests/keys/README
+++ b/tests/keys/README
@@ -94,6 +94,11 @@ README
     - uncomment "# gost = gost_section" line
     - specify correct path to "gost.so" in the "dynamic_path" variable in "gost_section" gost_section
 
+    > openssl req -config ./openssl.cnf -newkey gost2001 -pkeyopt paramset:A -nodes -keyout gost2001key.pem -out gost2001req.pem
+    > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem -out gost2001cert.pem -infiles gost2001req.pem  
+    > OPENSSL_CONF=./openssl.cnf openssl verify -CAfile cacert.pem -untrusted ca2cert.pem gost2001cert.pem
+    > rm gost2001req.pem
+
     > openssl req -config ./openssl.cnf -newkey gost2012_256 -pkeyopt paramset:A -nodes -keyout gost2012_256key.pem -out gost2012_256req.pem
     > openssl ca -config ./openssl.cnf -cert ca2cert.pem -keyfile ca2key.pem -out gost2012_256cert.pem -infiles gost2012_256req.pem  
     > OPENSSL_CONF=./openssl.cnf openssl verify -CAfile cacert.pem -untrusted ca2cert.pem gost2012_256cert.pem
@@ -104,7 +109,7 @@ README
     > OPENSSL_CONF=./openssl.cnf openssl verify -CAfile cacert.pem -untrusted ca2cert.pem gost2012_512cert.pem
     > rm gost2012_512req.pem
 
- 
+
 3. Converting key and certs between PEM and DER formats
 
   - Convert PEM private key file to DER file
@@ -133,6 +138,7 @@ README
     > openssl x509 -outform DER -in ecdsa-secp256r1-cert.pem -out ecdsa-secp256r1-cert.der
 
     See config for GOST above:
+    > openssl x509 -outform DER -in gost2001cert.pem -out gost2001cert.der 
     > openssl x509 -outform DER -in gost2012_256cert.pem -out gost2012_256cert.der 
     > openssl x509 -outform DER -in gost2012_512cert.pem -out gost2012_512cert.der 
   
@@ -167,6 +173,7 @@ README
         -outform der -topk8
      
      See config for GOST above:
+     > OPENSSL_CONF=./openssl.cnf openssl pkcs8 -in gost2001key.pem -inform pem -out gost2001key.p8-pem -outform pem -topk8
      > OPENSSL_CONF=./openssl.cnf openssl pkcs8 -in gost2012_256key.pem -inform pem -out gost2012_256key.p8-pem -outform pem -topk8
      > OPENSSL_CONF=./openssl.cnf openssl pkcs8 -in gost2012_512key.pem -inform pem -out gost2012_512key.p8-pem -outform pem -topk8
   
@@ -197,6 +204,10 @@ README
     > rm all-ecdsa-secp256r1.pem
 
    See config for GOST above:
+    > cat gost2001key.pem gost2001cert.pem ca2cert.pem cacert.pem > all-gost2001.pem
+    > OPENSSL_CONF=./openssl.cnf openssl pkcs12 -export -in all-gost2001.pem -name TestGost2012_256Key -out gost2001key.p12
+    > rm all-gost2001.pem
+
     > cat gost2012_256key.pem gost2012_256cert.pem ca2cert.pem cacert.pem > all-gost2012_256.pem
     > OPENSSL_CONF=./openssl.cnf openssl pkcs12 -export -in all-gost2012_256.pem -name TestGost2012_256Key -out gost2012_256key.p12
     > rm all-gost2012_256.pem
