remove skeleton app -- stale code tends to go bad

--- a/man/xmlsec1.1
+++ b/man/xmlsec1.1
@@ -67,6 +67,10 @@ when we are trying not to use XPath/XPointer engine; this is a hack
 and I don't know what else might be broken in your application when
 you use it (also check "\-\-id\-attr" option because you might need it)
 .HP
+\fB\-\-hmac\-min\-out\-len\fR <bits>
+.IP
+sets minimum HMAC output length to <bits>
+.HP
 \fB\-\-binary\-data\fR <file>
 .IP
 binary <file> to encrypt
