--- a/man/xmlsec1.1
+++ b/man/xmlsec1.1
@@ -315,6 +315,10 @@ specified then the default one is used)
 .IP
 path to crypto engine configuration
 .HP
+\fB\-\-verbose\fR
+.IP
+print detailed error messages
+.HP
 \fB\-\-repeat\fR <number>
 .IP
 repeat the operation <number> times
@@ -324,14 +328,6 @@ repeat the operation <number> times
 sets the transforms binary processing chunk size to <size>;
 increasing chunk size might improve performance at the expense
 of increased memory usage
-.HP
-\fB\-\-disable\-error\-msgs\fR
-.IP
-do not print xmlsec error messages
-.HP
-\fB\-\-print\-crypto\-error\-msgs\fR
-.IP
-print errors stack at the end
 .HP
 \fB\-\-xxe\fR
 .IP
